--- a/index.html
+++ b/index.html
@@ -3,286 +3,179 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Página de Mateo 6-2</title>
+  <title>Loader Mano 👍</title>
   <style>
     body {
-      margin: 0;
-      height: 100vh;
-      background: black;
-      color: #00ff00;
-      font-family: 'Courier New', Courier, monospace;
-      overflow: hidden;
-    }
-
-    /* Canvas Matrix */
-    canvas {
-      position: fixed;
-      top: 0;
-      left: 0;
-      z-index: -1;
-    }
-
-    /* Contenedor principal */
-    .container {
-      display: none; /* Oculto hasta que termine la carga */
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-      text-align: center;
-      padding: 20px;
-    }
-
-    /* Texto animado estilo hacker */
-    .typing-text {
-      font-size: clamp(1.2rem, 4vw, 2.5rem);
-      color: #00ff00;
-      text-shadow: 0 0 5px #00ff00, 0 0 15px #00ff00, 0 0 30px #00ff00;
-      border-right: 2px solid #00ff00;
-      white-space: nowrap;
-      overflow: hidden;
-      width: 0;
-      animation: typing 4s steps(30, end) infinite alternate,
-                 blink 0.7s infinite;
-    }
-
-    @keyframes typing {
-      from { width: 0; }
-      to { width: 25ch; }
-    }
-
-    @keyframes blink {
-      50% { border-color: transparent; }
-    }
-
-    /* ================== BOTÓN ================== */
-    .download-btn {
-      margin-top: 30px;
-    }
-
-    .download-btn button {
-      width: 165px;
-      height: 62px;
-      cursor: pointer;
-      color: #fff;
-      font-size: 17px;
-      border-radius: 1rem;
-      border: none;
-      position: relative;
-      background: #100720;
-      transition: 0.3s;
-      box-shadow: 0 0 10px rgba(255, 94, 247, 0.6);
-    }
-
-    .download-btn button::after {
-      content: '';
-      width: 100%;
-      height: 100%;
-      background-image: radial-gradient(circle farthest-corner at 10% 20%, rgba(255,94,247,1) 17.8%, rgba(2,245,255,1) 100.2%);
-      filter: blur(20px);
-      z-index: -1;
-      position: absolute;
-      left: 0;
-      top: 0;
-      opacity: 0.8;
-      border-radius: 1rem;
-      transition: 0.3s;
-    }
-
-    .download-btn button:hover {
-      transform: scale(1.05);
-      box-shadow: 0 0 20px rgba(2,245,255,0.9), 0 0 30px rgba(255,94,247,0.9);
-    }
-
-    .download-btn button:active {
-      transform: scale(0.9) rotate(3deg);
-      background: radial-gradient(circle farthest-corner at 10% 20%, rgba(255,94,247,1) 17.8%, rgba(2,245,255,1) 100.2%);
-      transition: 0.2s;
-    }
-
-    /* ================== PANTALLA DE CARGA ================== */
-    #loader {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: black;
       display: flex;
       justify-content: center;
       align-items: center;
-      flex-direction: column;
-      z-index: 9999;
-      color: #00ff00;
-      font-size: 1.5rem;
+      height: 100vh;
+      background: #0f0f0f;
+      margin: 0;
+      font-family: Arial, sans-serif;
+      overflow: hidden;
     }
 
-    /* ================== PIRÁMIDE ANIMADA ================== */
-    .pyramid-loader {
+    /* Loader */
+    .loader {
+      text-align: center;
+      color: white;
+    }
+
+    .🤚 {
+      --skin-color: #E4C560;
+      --tap-speed: 0.6s;
+      --tap-stagger: 0.1s;
       position: relative;
-      width: 150px;
-      height: 150px;
+      width: 80px;
+      height: 60px;
+      margin: 0 auto 20px;
+    }
+
+    .🤚:before {
+      content: '';
       display: block;
-      transform-style: preserve-3d;
-      transform: rotateX(-20deg);
-      margin-top: 25px;
+      width: 180%;
+      height: 75%;
+      position: absolute;
+      top: 70%;
+      right: 20%;
+      background-color: black;
+      border-radius: 40px 10px;
+      filter: blur(10px);
+      opacity: 0.3;
     }
 
-    .wrapper {
-      position: relative;
+    .🌴 {
+      display: block;
       width: 100%;
       height: 100%;
-      transform-style: preserve-3d;
-      animation: spin 4s linear infinite;
-    }
-
-    @keyframes spin {
-      100% {
-        transform: rotateY(360deg);
-      }
-    }
-
-    .pyramid-loader .wrapper .side {
-      width: 70px;
-      height: 70px;
       position: absolute;
       top: 0;
       left: 0;
-      right: 0;
-      bottom: 0;
-      margin: auto;
-      transform-origin: center top;
-      clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
+      background-color: var(--skin-color);
+      border-radius: 10px 40px;
     }
 
-    .pyramid-loader .wrapper .side1 {
-      transform: rotateZ(-30deg) rotateY(90deg);
-      background: conic-gradient(#2BDEAC, #F028FD, #D8CCE6, #2F2585);
-    }
-
-    .pyramid-loader .wrapper .side2 {
-      transform: rotateZ(30deg) rotateY(90deg);
-      background: conic-gradient(#2F2585, #D8CCE6, #F028FD, #2BDEAC);
-    }
-
-    .pyramid-loader .wrapper .side3 {
-      transform: rotateX(30deg);
-      background: conic-gradient(#2F2585, #D8CCE6, #F028FD, #2BDEAC);
-    }
-
-    .pyramid-loader .wrapper .side4 {
-      transform: rotateX(-30deg);
-      background: conic-gradient(#2BDEAC, #F028FD, #D8CCE6, #2F2585);
-    }
-
-    .pyramid-loader .wrapper .shadow {
-      width: 60px;
-      height: 60px;
-      background: #8B5AD5;
+    .👍 {
       position: absolute;
-      top: 0;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      margin: auto;
-      transform: rotateX(90deg) translateZ(-40px);
-      filter: blur(12px);
+      width: 120%;
+      height: 38px;
+      background-color: var(--skin-color);
+      bottom: -18%;
+      right: 1%;
+      transform-origin: calc(100% - 20px) 20px;
+      transform: rotate(-20deg);
+      border-radius: 30px 20px 20px 10px;
+      border-bottom: 2px solid rgba(0, 0, 0, 0.1);
+      border-left: 2px solid rgba(0, 0, 0, 0.1);
+    }
+
+    .👍:after {
+      width: 20%;
+      height: 60%;
+      content: '';
+      background-color: rgba(255, 255, 255, 0.3);
+      position: absolute;
+      bottom: -8%;
+      left: 5px;
+      border-radius: 60% 10% 10% 30%;
+      border-right: 2px solid rgba(0, 0, 0, 0.05);
+    }
+
+    .👉 {
+      position: absolute;
+      width: 80%;
+      height: 35px;
+      background-color: var(--skin-color);
+      bottom: 32%;
+      right: 64%;
+      transform-origin: 100% 20px;
+      animation-duration: calc(var(--tap-speed) * 2);
+      animation-timing-function: ease-in-out;
+      animation-iteration-count: infinite;
+      transform: rotate(10deg);
+    }
+
+    .👉:before {
+      content: '';
+      position: absolute;
+      width: 140%;
+      height: 30px;
+      background-color: var(--skin-color);
+      bottom: 8%;
+      right: 65%;
+      transform-origin: calc(100% - 20px) 20px;
+      transform: rotate(-60deg);
+      border-radius: 20px;
+    }
+
+    .👉:nth-child(1) {
+      animation-delay: 0;
+      filter: brightness(70%);
+      animation-name: tap-upper-1;
+    }
+
+    .👉:nth-child(2) {
+      animation-delay: var(--tap-stagger);
+      filter: brightness(80%);
+      animation-name: tap-upper-2;
+    }
+
+    .👉:nth-child(3) {
+      animation-delay: calc(var(--tap-stagger) * 2);
+      filter: brightness(90%);
+      animation-name: tap-upper-3;
+    }
+
+    .👉:nth-child(4) {
+      animation-delay: calc(var(--tap-stagger) * 3);
+      filter: brightness(100%);
+      animation-name: tap-upper-4;
+    }
+
+    @keyframes tap-upper-1 {
+      0%, 50%, 100% { transform: rotate(10deg) scale(0.4); }
+      40% { transform: rotate(50deg) scale(0.4); }
+    }
+
+    @keyframes tap-upper-2 {
+      0%, 50%, 100% { transform: rotate(10deg) scale(0.6); }
+      40% { transform: rotate(50deg) scale(0.6); }
+    }
+
+    @keyframes tap-upper-3 {
+      0%, 50%, 100% { transform: rotate(10deg) scale(0.8); }
+      40% { transform: rotate(50deg) scale(0.8); }
+    }
+
+    @keyframes tap-upper-4 {
+      0%, 50%, 100% { transform: rotate(10deg) scale(1); }
+      40% { transform: rotate(50deg) scale(1); }
+    }
+
+    .loader p {
+      font-size: 18px;
+      letter-spacing: 2px;
+      animation: blink 1.2s infinite;
+    }
+
+    @keyframes blink {
+      50% { opacity: 0.5; }
     }
   </style>
 </head>
 <body>
-  <!-- Pantalla de carga -->
-  <div id="loader">
-    <div>Cargando sistema...</div>
-    <!-- Pirámide en la carga -->
-    <div class="pyramid-loader">
-      <div class="wrapper">
-        <span class="side side1"></span>
-        <span class="side side2"></span>
-        <span class="side side3"></span>
-        <span class="side side4"></span>
-        <span class="shadow"></span>
-      </div>
+  <div class="loader">
+    <div class="🤚">
+      <div class="🌴"></div>
+      <div class="👍"></div>
+      <div class="👉"></div>
+      <div class="👉"></div>
+      <div class="👉"></div>
+      <div class="👉"></div>
     </div>
+    <p>Cargando...</p>
   </div>
-
-  <!-- Fondo Matrix -->
-  <canvas id="matrix"></canvas>
-
-  <!-- Contenido -->
-  <div class="container">
-    <div class="typing-text">El mejor grupo de la exposición...</div>
-    <div class="download-btn">
-      <a href="video.mp4" download>
-        <button>Descargar</button>
-      </a>
-    </div>
-
-    <!-- Pirámide debajo del botón -->
-    <div class="pyramid-loader" style="margin-top:40px; transform: scale(0.8) rotateX(-20deg);">
-      <div class="wrapper">
-        <span class="side side1"></span>
-        <span class="side side2"></span>
-        <span class="side side3"></span>
-        <span class="side side4"></span>
-        <span class="shadow"></span>
-      </div>
-    </div>
-  </div>
-
-  <script>
-    // ============= ANIMACIÓN MATRIX =============
-    const canvas = document.getElementById("matrix");
-    const ctx = canvas.getContext("2d");
-
-    canvas.height = window.innerHeight;
-    canvas.width = window.innerWidth;
-
-    const letters = "01";
-    const fontSize = 16;
-    const columns = canvas.width / fontSize;
-
-    const drops = [];
-    for (let x = 0; x < columns; x++) drops[x] = 1;
-
-    function draw() {
-      ctx.fillStyle = "rgba(0, 0, 0, 0.05)";
-      ctx.fillRect(0, 0, canvas.width, canvas.height);
-
-      ctx.fillStyle = `hsl(${Math.random() * 360}, 100%, 50%)`;
-      ctx.font = fontSize + "px monospace";
-
-      for (let i = 0; i < drops.length; i++) {
-        const text = letters.charAt(Math.floor(Math.random() * letters.length));
-        ctx.fillText(text, i * fontSize, drops[i] * fontSize);
-
-        if (drops[i] * fontSize > canvas.height && Math.random() > 0.975) {
-          drops[i] = 0;
-        }
-        drops[i]++;
-      }
-    }
-
-    setInterval(draw, 35);
-
-    // Ajustar canvas en resize
-    window.addEventListener("resize", () => {
-      canvas.height = window.innerHeight;
-      canvas.width = window.innerWidth;
-    });
-
-    // ============= SISTEMA DE CARGA =============
-    window.addEventListener("load", () => {
-      const loader = document.getElementById("loader");
-      setTimeout(() => {
-        loader.style.opacity = "0";
-        loader.style.transition = "0.5s";
-        setTimeout(() => {
-          loader.style.display = "none";
-          document.querySelector(".container").style.display = "flex";
-        }, 500);
-      }, 3000); // dura 3s la carga
-    });
-  </script>
 </body>
 </html>
