--- a/index.html
+++ b/index.html
@@ -5,37 +5,59 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cargando...</title>
   <style>
-    /* Fondo estilo Matrix */
-    body {
-      margin: 0;
-      height: 100vh;
-      background: black;
-      color: #00ff00;
+    /* Reset */
+    body,html {
+      margin:0;
+      padding:0;
+      height:100%;
+      overflow:hidden;
+      background:black;
+      color:#00ff00;
       font-family: monospace;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      flex-direction: column;
-      overflow: hidden;
     }
 
-    /* Texto de carga */
+    /* Canvas Matrix */
+    canvas {
+      position: fixed;
+      top:0;
+      left:0;
+      width:100%;
+      height:100%;
+      background:black;
+      z-index:0;
+    }
+
+    /* Pantalla de carga */
+    .loader {
+      position: fixed;
+      top:0;
+      left:0;
+      width:100%;
+      height:100%;
+      display:flex;
+      justify-content:center;
+      align-items:center;
+      flex-direction:column;
+      background:rgba(0,0,0,0.9);
+      z-index:1;
+    }
+
     .loading-text {
-      font-size: 2rem;
-      margin-bottom: 20px;
+      font-size:2rem;
+      margin-bottom:20px;
+      color:#00ff00;
+      text-shadow:0 0 10px #00ff00;
     }
 
-    /* Animación de la mano */
+    /* Mano animada */
     .🤚 {
       --skin-color: #E4C560;
       --tap-speed: 0.6s;
       --tap-stagger: 0.1s;
       position: relative;
-      width: 60px; /* más pequeño */
+      width: 60px;
       height: 50px;
-      margin-top: 10px; /* separación con el texto */
     }
-
     .🤚:before {
       content: '';
       display: block;
@@ -49,127 +71,77 @@
       filter: blur(10px);
       opacity: 0.3;
     }
-
-    .🌴 {
-      display: block;
-      width: 100%;
-      height: 100%;
-      position: absolute;
-      top: 0;
-      left: 0;
-      background-color: var(--skin-color);
-      border-radius: 10px 40px;
-    }
-
-    .👍 {
-      position: absolute;
-      width: 120%;
-      height: 38px;
-      background-color: var(--skin-color);
-      bottom: -18%;
-      right: 1%;
-      transform-origin: calc(100% - 20px) 20px;
-      transform: rotate(-20deg);
-      border-radius: 30px 20px 20px 10px;
-      border-bottom: 2px solid rgba(0, 0, 0, 0.1);
-      border-left: 2px solid rgba(0, 0, 0, 0.1);
-    }
-
-    .👍:after {
-      width: 20%;
-      height: 60%;
-      content: '';
-      background-color: rgba(255, 255, 255, 0.3);
-      position: absolute;
-      bottom: -8%;
-      left: 5px;
-      border-radius: 60% 10% 10% 30%;
-      border-right: 2px solid rgba(0, 0, 0, 0.05);
-    }
-
-    .👉 {
-      position: absolute;
-      width: 80%;
-      height: 35px;
-      background-color: var(--skin-color);
-      bottom: 32%;
-      right: 64%;
-      transform-origin: 100% 20px;
-      animation-duration: calc(var(--tap-speed) * 2);
-      animation-timing-function: ease-in-out;
-      animation-iteration-count: infinite;
-      transform: rotate(10deg);
-    }
-
-    .👉:before {
-      content: '';
-      position: absolute;
-      width: 140%;
-      height: 30px;
-      background-color: var(--skin-color);
-      bottom: 8%;
-      right: 65%;
-      transform-origin: calc(100% - 20px) 20px;
-      transform: rotate(-60deg);
-      border-radius: 20px;
-    }
-
-    .👉:nth-child(1) {
-      animation-delay: 0;
-      filter: brightness(70%);
-      animation-name: tap-upper-1;
-    }
-
-    .👉:nth-child(2) {
-      animation-delay: var(--tap-stagger);
-      filter: brightness(80%);
-      animation-name: tap-upper-2;
-    }
-
-    .👉:nth-child(3) {
-      animation-delay: calc(var(--tap-stagger) * 2);
-      filter: brightness(90%);
-      animation-name: tap-upper-3;
-    }
-
-    .👉:nth-child(4) {
-      animation-delay: calc(var(--tap-stagger) * 3);
-      filter: brightness(100%);
-      animation-name: tap-upper-4;
-    }
-
-    @keyframes tap-upper-1 {
-      0%, 50%, 100% { transform: rotate(10deg) scale(0.4); }
-      40% { transform: rotate(50deg) scale(0.4); }
-    }
-
-    @keyframes tap-upper-2 {
-      0%, 50%, 100% { transform: rotate(10deg) scale(0.6); }
-      40% { transform: rotate(50deg) scale(0.6); }
-    }
-
-    @keyframes tap-upper-3 {
-      0%, 50%, 100% { transform: rotate(10deg) scale(0.8); }
-      40% { transform: rotate(50deg) scale(0.8); }
-    }
-
-    @keyframes tap-upper-4 {
-      0%, 50%, 100% { transform: rotate(10deg) scale(1); }
-      40% { transform: rotate(50deg) scale(1); }
-    }
+    .🌴 {display:block;width:100%;height:100%;position:absolute;top:0;left:0;background-color:var(--skin-color);border-radius:10px 40px;}
+    .👍 {position:absolute;width:120%;height:38px;background-color:var(--skin-color);bottom:-18%;right:1%;transform-origin:calc(100% - 20px) 20px;transform:rotate(-20deg);border-radius:30px 20px 20px 10px;border-bottom:2px solid rgba(0,0,0,0.1);border-left:2px solid rgba(0,0,0,0.1);}
+    .👍:after {width:20%;height:60%;content:'';background-color:rgba(255,255,255,0.3);position:absolute;bottom:-8%;left:5px;border-radius:60% 10% 10% 30%;border-right:2px solid rgba(0,0,0,0.05);}
+    .👉 {position:absolute;width:80%;height:35px;background-color:var(--skin-color);bottom:32%;right:64%;transform-origin:100% 20px;animation-duration:calc(var(--tap-speed) * 2);animation-timing-function:ease-in-out;animation-iteration-count:infinite;transform:rotate(10deg);}
+    .👉:before {content:'';position:absolute;width:140%;height:30px;background-color:var(--skin-color);bottom:8%;right:65%;transform-origin:calc(100% - 20px) 20px;transform:rotate(-60deg);border-radius:20px;}
+    .👉:nth-child(1){animation-delay:0;filter:brightness(70%);animation-name:tap-upper-1;}
+    .👉:nth-child(2){animation-delay:var(--tap-stagger);filter:brightness(80%);animation-name:tap-upper-2;}
+    .👉:nth-child(3){animation-delay:calc(var(--tap-stagger) * 2);filter:brightness(90%);animation-name:tap-upper-3;}
+    .👉:nth-child(4){animation-delay:calc(var(--tap-stagger) * 3);filter:brightness(100%);animation-name:tap-upper-4;}
+    @keyframes tap-upper-1{0%,50%,100%{transform:rotate(10deg) scale(0.4);}40%{transform:rotate(50deg) scale(0.4);}}
+    @keyframes tap-upper-2{0%,50%,100%{transform:rotate(10deg) scale(0.6);}40%{transform:rotate(50deg) scale(0.6);}}
+    @keyframes tap-upper-3{0%,50%,100%{transform:rotate(10deg) scale(0.8);}40%{transform:rotate(50deg) scale(0.8);}}
+    @keyframes tap-upper-4{0%,50%,100%{transform:rotate(10deg) scale(1);}40%{transform:rotate(50deg) scale(1);}}
   </style>
 </head>
 <body>
-  <div class="loading-text">Cargando...</div>
-  
-  <!-- Mano animada debajo -->
-  <div class="🤚">
-    <div class="🌴"></div>
-    <div class="👍"></div>
-    <div class="👉"></div>
-    <div class="👉"></div>
-    <div class="👉"></div>
-    <div class="👉"></div>
+  <canvas id="matrix"></canvas>
+
+  <!-- Pantalla de carga -->
+  <div class="loader" id="loader">
+    <div class="loading-text">Cargando...</div>
+    <div class="🤚">
+      <div class="🌴"></div>
+      <div class="👍"></div>
+      <div class="👉"></div>
+      <div class="👉"></div>
+      <div class="👉"></div>
+      <div class="👉"></div>
+    </div>
   </div>
+
+  <script>
+    // Efecto Matrix
+    const canvas = document.getElementById("matrix");
+    const ctx = canvas.getContext("2d");
+    canvas.height = window.innerHeight;
+    canvas.width = window.innerWidth;
+
+    const letters = "アァイィウヴエェオカガキギクグケゲコゴサザシジスズセゼソゾタダチッヂツヅテデトドナニヌネノハバパヒビピフブプヘベペホボポマミムメモヤャユュヨョラリルレロワヰヱヲンABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789";
+    const matrix = letters.split("");
+
+    const font_size = 14;
+    const columns = canvas.width / font_size;
+    const drops = [];
+    for(let x=0; x<columns; x++) drops[x] = 1;
+
+    function draw(){
+      ctx.fillStyle = "rgba(0, 0, 0, 0.05)";
+      ctx.fillRect(0, 0, canvas.width, canvas.height);
+
+      ctx.fillStyle = "#0F0";
+      ctx.font = font_size + "px monospace";
+
+      for(let i=0; i<drops.length; i++){
+        const text = matrix[Math.floor(Math.random()*matrix.length)];
+        ctx.fillText(text, i*font_size, drops[i]*font_size);
+
+        if(drops[i]*font_size > canvas.height && Math.random() > 0.975)
+          drops[i] = 0;
+        drops[i]++;
+      }
+    }
+
+    setInterval(draw, 35);
+
+    // Simular carga (2.5 segundos y se oculta loader)
+    window.addEventListener("load", () => {
+      setTimeout(() => {
+        document.getElementById("loader").style.display = "none";
+      }, 2500);
+    });
+  </script>
 </body>
 </html>
