--- a/index.html
+++ b/index.html
@@ -3,154 +3,286 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Pantalla de Carga Matrix</title>
+  <title>Página de Mateo 6-2</title>
   <style>
-    /* Fondo tipo Matrix */
     body {
       margin: 0;
       height: 100vh;
       background: black;
       color: #00ff00;
-      font-family: monospace;
+      font-family: 'Courier New', Courier, monospace;
       overflow: hidden;
     }
 
+    /* Canvas Matrix */
     canvas {
       position: fixed;
       top: 0;
       left: 0;
-      width: 100%;
-      height: 100%;
       z-index: -1;
     }
 
-    /* Pantalla de carga */
+    /* Contenedor principal */
+    .container {
+      display: none; /* Oculto hasta que termine la carga */
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      text-align: center;
+      padding: 20px;
+    }
+
+    /* Texto animado estilo hacker */
+    .typing-text {
+      font-size: clamp(1.2rem, 4vw, 2.5rem);
+      color: #00ff00;
+      text-shadow: 0 0 5px #00ff00, 0 0 15px #00ff00, 0 0 30px #00ff00;
+      border-right: 2px solid #00ff00;
+      white-space: nowrap;
+      overflow: hidden;
+      width: 0;
+      animation: typing 4s steps(30, end) infinite alternate,
+                 blink 0.7s infinite;
+    }
+
+    @keyframes typing {
+      from { width: 0; }
+      to { width: 25ch; }
+    }
+
+    @keyframes blink {
+      50% { border-color: transparent; }
+    }
+
+    /* ================== BOTÓN ================== */
+    .download-btn {
+      margin-top: 30px;
+    }
+
+    .download-btn button {
+      width: 165px;
+      height: 62px;
+      cursor: pointer;
+      color: #fff;
+      font-size: 17px;
+      border-radius: 1rem;
+      border: none;
+      position: relative;
+      background: #100720;
+      transition: 0.3s;
+      box-shadow: 0 0 10px rgba(255, 94, 247, 0.6);
+    }
+
+    .download-btn button::after {
+      content: '';
+      width: 100%;
+      height: 100%;
+      background-image: radial-gradient(circle farthest-corner at 10% 20%, rgba(255,94,247,1) 17.8%, rgba(2,245,255,1) 100.2%);
+      filter: blur(20px);
+      z-index: -1;
+      position: absolute;
+      left: 0;
+      top: 0;
+      opacity: 0.8;
+      border-radius: 1rem;
+      transition: 0.3s;
+    }
+
+    .download-btn button:hover {
+      transform: scale(1.05);
+      box-shadow: 0 0 20px rgba(2,245,255,0.9), 0 0 30px rgba(255,94,247,0.9);
+    }
+
+    .download-btn button:active {
+      transform: scale(0.9) rotate(3deg);
+      background: radial-gradient(circle farthest-corner at 10% 20%, rgba(255,94,247,1) 17.8%, rgba(2,245,255,1) 100.2%);
+      transition: 0.2s;
+    }
+
+    /* ================== PANTALLA DE CARGA ================== */
     #loader {
       position: fixed;
       top: 0;
       left: 0;
       width: 100%;
       height: 100%;
-      background: rgba(0, 0, 0, 0.9);
+      background: black;
       display: flex;
-      flex-direction: column;
       justify-content: center;
       align-items: center;
+      flex-direction: column;
+      z-index: 9999;
       color: #00ff00;
-      font-size: 2rem;
-      z-index: 1000;
+      font-size: 1.5rem;
     }
 
-    /* Manito animada */
-    .🤚 {
-      --skin-color: #E4C560;
-      --tap-speed: 0.6s;
-      --tap-stagger: 0.1s;
+    /* ================== PIRÁMIDE ANIMADA ================== */
+    .pyramid-loader {
       position: relative;
-      width: 60px;
-      height: 40px;
-      margin-top: 20px;
-    }
-    .🌴 {
+      width: 150px;
+      height: 150px;
       display: block;
+      transform-style: preserve-3d;
+      transform: rotateX(-20deg);
+      margin-top: 25px;
+    }
+
+    .wrapper {
+      position: relative;
       width: 100%;
       height: 100%;
+      transform-style: preserve-3d;
+      animation: spin 4s linear infinite;
+    }
+
+    @keyframes spin {
+      100% {
+        transform: rotateY(360deg);
+      }
+    }
+
+    .pyramid-loader .wrapper .side {
+      width: 70px;
+      height: 70px;
       position: absolute;
       top: 0;
       left: 0;
-      background-color: var(--skin-color);
-      border-radius: 10px 40px;
-    }
-    .👍 {
-      position: absolute;
-      width: 120%;
-      height: 25px;
-      background-color: var(--skin-color);
-      bottom: -15%;
-      right: 1%;
-      transform-origin: calc(100% - 20px) 20px;
-      transform: rotate(-20deg);
-      border-radius: 30px 20px 20px 10px;
-    }
-    .👉 {
-      position: absolute;
-      width: 80%;
-      height: 20px;
-      background-color: var(--skin-color);
-      bottom: 32%;
-      right: 64%;
-      transform-origin: 100% 20px;
-      animation: tap 1s infinite ease-in-out;
-    }
-    @keyframes tap {
-      0%, 50%, 100% { transform: rotate(10deg) scale(0.8); }
-      40% { transform: rotate(50deg) scale(0.8); }
+      right: 0;
+      bottom: 0;
+      margin: auto;
+      transform-origin: center top;
+      clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
     }
 
-    /* Contenido de la web (oculto al inicio) */
-    #contenido {
-      display: none;
-      padding: 20px;
-      text-align: center;
+    .pyramid-loader .wrapper .side1 {
+      transform: rotateZ(-30deg) rotateY(90deg);
+      background: conic-gradient(#2BDEAC, #F028FD, #D8CCE6, #2F2585);
+    }
+
+    .pyramid-loader .wrapper .side2 {
+      transform: rotateZ(30deg) rotateY(90deg);
+      background: conic-gradient(#2F2585, #D8CCE6, #F028FD, #2BDEAC);
+    }
+
+    .pyramid-loader .wrapper .side3 {
+      transform: rotateX(30deg);
+      background: conic-gradient(#2F2585, #D8CCE6, #F028FD, #2BDEAC);
+    }
+
+    .pyramid-loader .wrapper .side4 {
+      transform: rotateX(-30deg);
+      background: conic-gradient(#2BDEAC, #F028FD, #D8CCE6, #2F2585);
+    }
+
+    .pyramid-loader .wrapper .shadow {
+      width: 60px;
+      height: 60px;
+      background: #8B5AD5;
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      margin: auto;
+      transform: rotateX(90deg) translateZ(-40px);
+      filter: blur(12px);
     }
   </style>
 </head>
 <body>
-  <!-- Fondo Matrix -->
-  <canvas id="matrix"></canvas>
-
   <!-- Pantalla de carga -->
   <div id="loader">
-    <div>Cargando...</div>
-    <div class="🤚">
-      <div class="🌴"></div>
-      <div class="👍"></div>
-      <div class="👉"></div>
+    <div>Cargando sistema...</div>
+    <!-- Pirámide en la carga -->
+    <div class="pyramid-loader">
+      <div class="wrapper">
+        <span class="side side1"></span>
+        <span class="side side2"></span>
+        <span class="side side3"></span>
+        <span class="side side4"></span>
+        <span class="shadow"></span>
+      </div>
     </div>
   </div>
 
-  <!-- Contenido normal -->
-  <div id="contenido">
-    <h1>Bienvenido 🚀</h1>
-    <p>Tu página cargó correctamente.</p>
+  <!-- Fondo Matrix -->
+  <canvas id="matrix"></canvas>
+
+  <!-- Contenido -->
+  <div class="container">
+    <div class="typing-text">El mejor grupo de la exposición...</div>
+    <div class="download-btn">
+      <a href="video.mp4" download>
+        <button>Descargar</button>
+      </a>
+    </div>
+
+    <!-- Pirámide debajo del botón -->
+    <div class="pyramid-loader" style="margin-top:40px; transform: scale(0.8) rotateX(-20deg);">
+      <div class="wrapper">
+        <span class="side side1"></span>
+        <span class="side side2"></span>
+        <span class="side side3"></span>
+        <span class="side side4"></span>
+        <span class="shadow"></span>
+      </div>
+    </div>
   </div>
 
   <script>
-    // Animación tipo Matrix
+    // ============= ANIMACIÓN MATRIX =============
     const canvas = document.getElementById("matrix");
     const ctx = canvas.getContext("2d");
 
     canvas.height = window.innerHeight;
     canvas.width = window.innerWidth;
 
-    const letters = "01".split("");
-    const fontSize = 14;
+    const letters = "01";
+    const fontSize = 16;
     const columns = canvas.width / fontSize;
-    const drops = Array(Math.floor(columns)).fill(1);
+
+    const drops = [];
+    for (let x = 0; x < columns; x++) drops[x] = 1;
 
     function draw() {
       ctx.fillStyle = "rgba(0, 0, 0, 0.05)";
       ctx.fillRect(0, 0, canvas.width, canvas.height);
-      ctx.fillStyle = "#0f0";
+
+      ctx.fillStyle = `hsl(${Math.random() * 360}, 100%, 50%)`;
       ctx.font = fontSize + "px monospace";
+
       for (let i = 0; i < drops.length; i++) {
-        const text = letters[Math.floor(Math.random() * letters.length)];
+        const text = letters.charAt(Math.floor(Math.random() * letters.length));
         ctx.fillText(text, i * fontSize, drops[i] * fontSize);
+
         if (drops[i] * fontSize > canvas.height && Math.random() > 0.975) {
           drops[i] = 0;
         }
         drops[i]++;
       }
     }
-    setInterval(draw, 33);
 
-    // Simular carga
-    window.onload = () => {
+    setInterval(draw, 35);
+
+    // Ajustar canvas en resize
+    window.addEventListener("resize", () => {
+      canvas.height = window.innerHeight;
+      canvas.width = window.innerWidth;
+    });
+
+    // ============= SISTEMA DE CARGA =============
+    window.addEventListener("load", () => {
+      const loader = document.getElementById("loader");
       setTimeout(() => {
-        document.getElementById("loader").style.display = "none";
-        document.getElementById("contenido").style.display = "block";
-      }, 3000); // 3 segundos
-    };
+        loader.style.opacity = "0";
+        loader.style.transition = "0.5s";
+        setTimeout(() => {
+          loader.style.display = "none";
+          document.querySelector(".container").style.display = "flex";
+        }, 500);
+      }, 3000); // dura 3s la carga
+    });
   </script>
 </body>
 </html>
